actualizaciones y continuo con MongoDB
git-svn-id: https://svn.php.net/repository/phpdoc/es/trunk@313904 c90b9560-bf6c-de11-be94-00142212c4b1

--- a/language/oop5/traits.xml
+++ b/language/oop5/traits.xml
@@ -1,9 +1,11 @@
 <?xml version="1.0" encoding="utf-8"?>
 <!-- $Revision$ -->
-<!-- EN-Revision: 7ee2349a71faecb4e08eccda1734e3dec76cb7d0 Maintainer: chuso Status: ready -->
+<!-- EN-Revision: c8a12f2b59f6f64d7c8bd40904afcc97a7d908c7 Maintainer: chuso Status: ready -->
  <sect1 xml:id="language.oop5.traits" xmlns="http://docbook.org/ns/docbook">
   <title>Traits</title>
-  
+  <para>
+   Desde PHP 5.4.0, PHP implementa una metodología de reutilización de código llamada Traits.
+  </para>
   <para>
    Los traits (rasgos) son un mecanismo de reutilización de código en lenguajes de herencia simple, como
    PHP. El objetivo de un trait es el de reducir las limitaciones propias de la herencia simple
@@ -174,17 +176,32 @@ Hola Mundo!
   <sect2 xml:id="language.oop5.traits.conflict">
    <title>Resolución de Conflictos</title>
    <para>
-    Si dos Traits insertan un miembro con el mismo nombre, se produce un error fatal,
+    Si dos Traits insertan un método con el mismo nombre, se produce un error fatal,
     siempre y cuando no se haya resuelto explicitamente el conflicto.
    </para>
    <para>
-    Para resolver los conflictos de nombres entre Traits, uno de ellos puede usar el operador
-    <literal>insteadof</literal> para definir la precedencia entre los Traits. Del mismo modo,
-    podría usarse el operador <literal>as</literal> para crear un alias en el nombre del
-    miembro conflictivo.
+    Para resolver los conflictos de nombres entre Traits en una misma clase,
+    se debe usar el operador <literal>insteadof</literal> para elejir unívocamente
+    uno de los métodos conflictivos.
+   </para>
+   <para>
+    Como esto sólo permite excluir métodos, se puede usar el operador
+    <literal>as</literal> para permitir incluir uno de los métodos
+    conflictivos bajo otro nombre.
    </para>
    <example xml:id="language.oop5.traits.examples.ex5">
     <title>Resolución de Conflictos</title>
+    <para>
+      En este ejemplo, Talker utiliza los traits A y B.
+      Como A y B tienen métodos conflictos, se define el uso
+      de la variante de smallTalk del trait B, y la variante de bigTalk del
+      traita A.
+    </para>
+    <para>
+     Aliased_Talker hace uso del operador <literal>as</literal> para poder usar la
+     implementación de bigTalk de B, bajo el alias adicional
+      <literal>talk</literal>.
+    </para>
     <programlisting role="php">
 <![CDATA[
 <?php
@@ -219,6 +236,36 @@ class Aliased_Talker {
     A::bigTalk insteadof B;
     B::bigTalk as talk;
   }
+}
+?>
+]]>
+    </programlisting>
+   </example>
+  </sect2>
+  
+  <sect2 xml:id="language.oop5.traits.visibility">
+   <title>Modificando la Visibilidad de los Métodos</title>
+   <para>
+    Al usar el operador <literal>as</literal>, se puede también ajustar la visibilidad
+    del método en la clase exhibida.
+   </para>
+   <example xml:id="language.oop5.traits.visibility.ex1">
+    <title>Modificar la Visibilidad de un Método</title>
+    <programlisting role="php">
+<![CDATA[
+<?php
+trait HolaMundo {
+  public function decirHola() {
+    echo 'Hola Mundo!';
+  }
+}
+
+class MiClase1 {
+  use HolaMundo { decirHola as protected }
+}
+
+class MiClase2 {
+  use HolaMundo { hacerHolaMundo as private decirHola }
 }
 ?>
 ]]>
