--- a/language/wrappers/php.xml
+++ b/language/wrappers/php.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <!-- $Revision$ -->
-<!-- EN-Revision: 38bc312a17120963ffed8b6f660d1af53e91ae28 Maintainer: yago Status: ready -->
+<!-- EN-Revision: 1028f91a84abc152343a2be003b9fbf617bacea5 Maintainer: chuso Status: ready -->
 
 <refentry xml:id="wrappers.php" xmlns="http://docbook.org/ns/docbook" xmlns:xlink="http://www.w3.org/1999/xlink" role="noversion">
  <refnamediv>
@@ -8,90 +8,170 @@
   <refpurpose>Acceso a distintos flujos de E/S</refpurpose>
  </refnamediv>
 
- <refsect1 role="description"><!-- {{{ -->
+ <refsect1 role="description">
   &reftitle.description;
   <para>
-   <filename>php://stdin</filename>, <filename>php://stdout</filename>
-   y <filename>php://stderr</filename> permiten acceder directamente al
-   flujo correspondiente de entrada o salida del proceso PHP. El flujo
-   hace referencia a un descriptor de fichero duplicado, de modo que si se abre
-   <filename>php://stdin</filename> y más tarde se cierra, sólo se cerraría
-   la copia del descriptor--el flujo real al que referencia
-   <constant>STDIN</constant> no se vería afectado. Tenga en cuenta que en
-   versiones de PHP anteriores a la 5.2.1, se presenta un comportamiento irregular.
-   Se recomienda utilizar las constantes <constant>STDIN</constant>,
-   <constant>STDOUT</constant> y <constant>STDERR</constant> en lugar de
-   abrir flujos manualmente usando estas envolturas.
+   PHP ofrece una serie de flujos de E/S generales que permite acceder tanto a los
+   flujos de entrada y salida de PHP, a la entrada estándar, a descriptores de ficheros de
+   salida y de errores, a flujos de ficheros temporales en memoria y en disco, y a filtros
+   para poder manipular otros recursos de ficheros según se lee o se escribe
+   en ellos.
   </para>
-  <simpara>
-   <filename>php://output</filename> permite escribir en el buffer de salida
-   de la misma manera que lo harían <function>print</function> y <function>echo</function>.
-  </simpara>
-  <simpara>
-   <filename>php://input</filename> permite leer datos a partir del cuerpo
-   solicitado. En el caso de peticiones POST, es preferible a
-   <varname>$HTTP_RAW_POST_DATA</varname> ya que no depende de diretivas
-   &php.ini; especiales. Sin embargo, cuando no se genera
-   automáticamente <varname>$HTTP_RAW_POST_DATA</varname>,
-   se trata de una alternativa que hace un uso menos intensivo de memoria
-   que activando <link linkend="ini.always-populate-raw-post-data">always_populate_raw_post_data</link>.
-   <filename>php://input</filename> no está disponible con
-   <literal>enctype="multipart/form-data"</literal>.
-  </simpara>
-  <note>
-   <simpara>
-    Los flujos que se abren con <filename>php://input</filename> sólo pueden leerse
-    una vez; no hay soporte para operaciones de búsqueda. Pero, dependiendo
-    de la SAPI, podría ser posible abrir otro flujo
-    <filename>php://input</filename> para reiniciar la lectura. Esto
-    sólo es posible si los datos de la petición se han guardado. Este caso es típico
-    en peticiones POST, pero no en otros métodos de petición, como por ejemplo
-    PUT o PROPFIND.
-   </simpara>
-  </note>
-  <simpara>
-   <filename>php://stdin</filename> y
-   <filename>php://input</filename> son de solo lectura, mientras que
-   <filename>php://stdout</filename>,
-   <filename>php://stderr</filename> y
-   <filename>php://output</filename> son de sólo escritura.
-  </simpara>
 
-  <simpara>
+  <refsect2>
+   <title>php://stdin, php://stdout y php://stderr</title>
+   <simpara>
+    <filename>php://stdin</filename>, <filename>php://stdout</filename>
+    y <filename>php://stderr</filename> permiten acceder directamente al
+    flujo correspondiente de entrada o salida del proceso PHP. El flujo
+    hace referencia a un descriptor de fichero duplicado, de modo que si se abre
+    <filename>php://stdin</filename> y más tarde se cierra, sólo se cerraría
+    la copia del descriptor--el flujo real al que referencia
+    <constant>STDIN</constant> no se vería afectado. Tenga en cuenta que en
+    versiones de PHP anteriores a la 5.2.1, se presenta un comportamiento irregular.
+    Se recomienda utilizar las constantes <constant>STDIN</constant>,
+    <constant>STDOUT</constant> y <constant>STDERR</constant> en lugar de
+    abrir flujos manualmente usando estas envolturas.
+   </simpara>
+   <simpara>
+    <filename>php://stdin</filename> es de sólo lectura, mientras que
+    <filename>php://stdout</filename> y <filename>php://stderr</filename> son de
+    sólo escritura.
+   </simpara>
+  </refsect2>
+
+  <refsect2>
+   <title>php://input</title>
+   <simpara>
+    <filename>php://input</filename> permite leer datos a partir del cuerpo
+    solicitado. En el caso de peticiones POST, es preferible a
+    <varname>$HTTP_RAW_POST_DATA</varname> ya que no depende de diretivas
+    &php.ini; especiales. Sin embargo, cuando no se genera
+    automáticamente <varname>$HTTP_RAW_POST_DATA</varname>,
+    se trata de una alternativa que hace un uso menos intensivo de memoria
+    que activando <link linkend="ini.always-populate-raw-post-data">always_populate_raw_post_data</link>.
+    <filename>php://input</filename> no está disponible con
+    <literal>enctype="multipart/form-data"</literal>.
+   </simpara>
+   <note>
+    <simpara>
+     Los flujos que se abren con <filename>php://input</filename> sólo pueden leerse
+     una vez; no hay soporte para operaciones de búsqueda. Pero, dependiendo
+     de la SAPI, podría ser posible abrir otro flujo
+     <filename>php://input</filename> para reiniciar la lectura. Esto
+     sólo es posible si los datos de la petición se han guardado. Este caso es típico
+     en peticiones POST, pero no en otros métodos de petición, como por ejemplo
+     PUT o PROPFIND.
+    </simpara>
+   </note>
+  </refsect2>  
+
+  <refsect2>
+   <title>php://output</title>
+   <para>
+    <filename>php://output</filename> es un flujo de sólo salida que permite
+    escribir en el buffer de salida tal como lo hacen
+    <function>print</function> o <function>echo</function>.
+   </para>
+  </refsect2>
+  
+  <refsect2>
+   <title>php://fd</title>
+   <simpara>
    <filename>php://fd</filename> permite el acceso directo al descriptor de archivo
    dado. Por ejemplo, <filename>php://fd/3</filename> refiere al descriptor
    de archivo 3.
-  </simpara>
-
-  <simpara>
-   <filename>php://filter</filename> es una especie de meta-envoltura diseñada
-   para permitir el filtrado de flujos en las aperturas.
-   Esto es muy útil en las funciones todo en uno, como
-   <function>readfile</function>, <function>file</function>, y
-   <function>file_get_contents</function> donde, por otra parte,
-   no se pueden aplicar filtros a los flujos antes de que se lea
-   su contenido.
-  </simpara>
-  <simpara>
-   <filename>php://filter</filename> tiene los siguientes 'parámetros'
-   incorporados en su 'ruta'.
-  </simpara>
- </refsect1><!-- }}} -->
-
- <refsect1 role="usage"> <!-- {{{ -->
-  &reftitle.options;
-  <itemizedlist>
-   <listitem><simpara><filename>php://stdin</filename></simpara></listitem>
-   <listitem><simpara><filename>php://stdout</filename></simpara></listitem>
-   <listitem><simpara><filename>php://stderr</filename></simpara></listitem>
-   <listitem><simpara><filename>php://output</filename></simpara></listitem>
-   <listitem><simpara><filename>php://input</filename></simpara></listitem>
-   <listitem><simpara><filename>php://filter</filename> (disponible desde PHP 5.0.0)</simpara></listitem>
-   <listitem><simpara><filename>php://memory</filename> (disponible desde PHP 5.1.0)</simpara></listitem>
-   <listitem><simpara><filename>php://temp</filename> (disponible desde PHP 5.1.0)</simpara></listitem>
-   <listitem><simpara><filename>php://fd</filename> (available since PHP 5.3.6)</simpara></listitem>
-  </itemizedlist>
- </refsect1> <!-- }}} -->
+   </simpara>
+  </refsect2>
+  
+  <refsect2>
+   <title>php://memory y php://temp</title>
+   <simpara>
+    <filename>php://memory</filename> y <filename>php://temp</filename> son flujos de
+    lectura-escritura que permiten almacenar datos temporales en una envoltura similar a un
+    fichero. La única diferencia entre las dos es que
+    <filename>php://memory</filename> siempre almacenará sus datos en memoria,
+    mientras que <filename>php://temp</filename> utilizará un fichero temporal cuando
+    la cantidad de datos almacenados superen el límite predefinido (por omisión, 2 MB).
+   </simpara>
+   <simpara>
+    El límite de memoria de <filename>php://temp</filename> se puede controlar añadiendo
+    <literal>/maxmemory:NN</literal>, donde <literal>NN</literal> es
+    la cantidad en bytes máxima de datos a almacenar en memoria antes de recurrir a
+    un fichero temporal.
+   </simpara>
+  </refsect2>
+  
+  <refsect2>
+   <title>php://filter</title>
+   <simpara> 
+    <filename>php://filter</filename> es una especie de meta-envoltura diseñada
+    para permitir aplicar <link linkend="filters">filtros</link> a los flujos en las aperturas.
+    Esto es muy útil en las funciones todo en uno, como
+    <function>readfile</function>, <function>file</function>, y
+    <function>file_get_contents</function> donde, por otra parte,
+    no se pueden aplicar filtros a los flujos antes de que se lea
+    su contenido.
+   </simpara>
+   <para>
+    <filename>php://filter</filename> acepta los siguientes parámetros como parte
+    de su ruta. Revise los ejemplos para ver casos de uso de estos específicos
+    parámetros.
+   </para>
+   <para>
+    <table>
+     <title>parámetros de php://filter</title>
+     <tgroup cols="2">
+      <thead>
+       <row>
+        <entry>Nombre</entry>
+        <entry>Descripción</entry>
+       </row>
+      </thead>
+      <tbody>
+       <row>
+        <entry>
+         <literal>resource=&lt;flujo a filtrar&gt;</literal>
+        </entry>
+        <entry>
+         Este parámetro es obligatorio. Especifica el flujo que se desea
+         filtrar.
+        </entry>
+       </row>
+       <row>
+        <entry>
+         <literal>read=&lt;listra de filtros a aplicar a la cadena de lectura&gt;</literal>
+        </entry>
+        <entry>
+         Este parámetro es opcional. Se pueden enumerar uno o más filtros,
+         separados por el carácter <literal>|</literal>.
+        </entry>
+       </row>
+       <row>
+        <entry>
+         <literal>write=&lt;lista de filtros a aplicar a la cadena de escritura&gt;</literal>
+        </entry>
+        <entry>
+         Este parámetro es opcional. Se puedene enumerar uno o más filtros,
+         separados por el carácter <literal>|</literal>.
+        </entry>
+       </row>
+       <row>
+        <entry>
+         <literal>&lt;lista de filtros a aplicar a las dos cadenas&gt;</literal>
+        </entry>
+        <entry>
+         Cualquier listra de filtros que no esté precedida ni por <literal>read=</literal>
+         ni por <literal>write=</literal> se aplicará tanto a las cadenas de lectura
+         como de escritura según proceda.
+        </entry>
+       </row>
+      </tbody>
+     </tgroup>
+    </table>
+   </para>
+  </refsect2>
+ </refsect1>
 
  <refsect1 role="options"><!-- {{{ -->
   &reftitle.options;
@@ -99,7 +179,7 @@
    <table>
     <title>
      Resumen de la Envoltura (Para <literal>php://filter</literal>,
-     consúltese el resumen de la envoltura que se filtra.)
+     consúltese el resumen de la envoltura que se filtra)
     </title>
     <tgroup cols="2">
      <thead>
@@ -200,11 +280,69 @@
    </table>
   </para>
  </refsect1> <!-- }}} -->
+ 
+ <refsect1 role="changelog"><!-- {{{ -->
+  &reftitle.changelog;
+  <para>
+   <informaltable>
+    <tgroup cols="2">
+     <thead>
+      <row>
+       <entry>&Version;</entry>
+       <entry>&Description;</entry>
+      </row>
+     </thead>
+     <tbody>
+      <row>
+       <entry>5.3.6</entry>
+       <entry>
+        Se añadió <filename>php://fd</filename>.
+       </entry>
+      </row>
+      <row>
+       <entry>5.1.0</entry>
+       <entry>
+        Se añadió <filename>php://memory</filename> y <filename>php://temp</filename>.
+       </entry>
+      </row>
+      <row>
+       <entry>5.0.0</entry>
+       <entry>
+        Se añadió <filename>php://filter</filename>.
+       </entry>
+      </row>
+     </tbody>
+    </tgroup>
+   </informaltable>
+  </para>
+ </refsect1><!-- }}} -->
 
  <refsect1 role="examples"><!-- {{{ -->
   &reftitle.examples;
   <example><!-- {{{ -->
-   <title>/resource=&lt;flujo a filtrar&gt; (<emphasis>obligatorio</emphasis>)</title>
+   <title>php://temp/maxmemory</title>
+   <para>
+    Este parámetro opcional permite establecer el límite de memoria a partir del cual
+    <filename>php://temp</filename> comienza a usar un fichero temporal.
+   </para>
+   <programlisting role="php">
+<![CDATA[
+<?php
+// Establecer el límite a 5 MB.
+$fiveMBs = 5 * 1024 * 1024;
+$fp = fopen("php://temp/maxmemory:$fiveMBs", 'r+');
+
+fputs($fp, "hello\n");
+
+// Leer lo que hemos escrito.
+rewind($fp);
+echo stream_get_contents($fp);
+?>
+]]>
+   </programlisting>
+  </example><!-- }}} -->
+  <example><!-- {{{ -->
+   <title>php://filter/resource=&lt;flujo a filtrar&gt;</title>
    <para>
      Este parámetro tiene que ubicarse
      al final de la especificación de <filename>php://filter</filename> y
@@ -214,8 +352,8 @@
 <![CDATA[
 <?php
 /* Esto es equivalente a:
-   readfile("http://www.example.com");
-   dado que no se especifica ningún filtro */
+  readfile("http://www.example.com");
+  dado que no se especifica ningún filtro */
 
 readfile("php://filter/resource=http://www.example.com");
 ?>
@@ -223,7 +361,7 @@ readfile("php://filter/resource=http://www.example.com");
    </programlisting>
   </example><!-- }}} -->
   <example><!-- {{{ -->
-   <title>/read=&lt;lista de filtros de lectura para aplicar en cadena&gt; (<emphasis>opcional</emphasis>)</title>
+   <title>php://filter/read=&lt;lista de filtros a aplicar a la cadena de lectura&gt;</title>
    <para>
      Este parámetro contiene uno o más
      nombres de filtros separados por el caracter <literal>|</literal>.
@@ -232,18 +370,18 @@ readfile("php://filter/resource=http://www.example.com");
 <![CDATA[
 <?php
 /* Devolverá el contenido de
-   www.example.com en mayúsculas */
+  www.example.com en mayúsculas */
 readfile("php://filter/read=string.toupper/resource=http://www.example.com");
 
 /* Hará lo mismo que el ejemplo de arriba
-   pero además lo codificará en ROT13 */
+  pero además lo codificará en ROT13 */
 readfile("php://filter/read=string.toupper|string.rot13/resource=http://www.example.com");
 ?>
 ]]>
    </programlisting>
   </example><!-- }}} -->
   <example><!-- {{{ -->
-   <title>/write=&lt;lista de filtros de escritura para aplicar en cadena&gt; (<emphasis>opcional</emphasis>)</title>
+   <title>php://filter/write=&lt;lista de filtros a aplicar a la cadena de escritura&gt;</title>
    <para>
      Este parámetro contiene uno o más
      nombres de filtros separados por el caracter <literal>|</literal>.
@@ -252,49 +390,9 @@ readfile("php://filter/read=string.toupper|string.rot13/resource=http://www.exam
 <![CDATA[
 <?php
 /* Filtrará el string "Hello World" con
-   el filtro rot13, y después lo escribirá en
-   example.txt dentro del directorio actual */
+  el filtro rot13, y después lo escribirá en
+  example.txt dentro del directorio actual */
 file_put_contents("php://filter/write=string.rot13/resource=example.txt","Hello World");
-?>
-]]>
-   </programlisting>
-  </example><!-- }}} -->
-  <!-- {{{ -->
-  <simpara>
-   <literal>/&lt;lista de filtros para aplicar en ambas direcciones&gt;</literal> (<emphasis>opcional</emphasis>)
-   Todos los filtros que no estén precedidos
-   ni por <literal>read=</literal> ni por <literal>write=</literal>
-   se aplicarán tanto en las lecturas como en las escrituras.
-  </simpara>
-  <simpara>
-   La envoltura <filename>php://memory</filename> almacena los datos
-   en memoria. <filename>php://temp</filename> se comporta de una forma parecida, pero en
-   su lugar, utiliza un fichero temporal para almacenar los datos una vez que
-   se supera un determinado umbral de memoria (por omisión es 2 MB).
-  </simpara>
-  <simpara>
-   La envoltura <filename>php://temp</filename> acepta los siguientes
-   'parámetros' como parte de su 'ruta':
-  </simpara>
-  <!-- }}} -->
-  <example><!-- {{{ -->
-   <title>/maxmemory:&lt;número de bytes&gt; (<emphasis>opcional</emphasis>)</title>
-   <para>
-     Permite cambiar el valor por omisión
-     del límite de memoria (cuándo se mueven los datos a un fichero
-     temporal).
-   </para>
-   <programlisting role="php">
-<![CDATA[
-<?php
-$fiveMBs = 5 * 1024 * 1024;
-$fp = fopen("php://temp/maxmemory:$fiveMBs", 'r+');
-
-fputs($fp, "hello\n");
-
-// leemos lo que hemos escrito
-rewind($fp);
-echo stream_get_contents($fp);
 ?>
 ]]>
    </programlisting>
