--- a/language/control-structures/foreach.xml
+++ b/language/control-structures/foreach.xml
@@ -1,14 +1,13 @@
 <?xml version="1.0" encoding="utf-8"?>
 <!-- $Revision$ -->
-<!-- EN-Revision: c7aca484fd1d7eaccd03f0e011f858fa93d105b9 Maintainer: jpberdejo Status: ready -->
+<!-- EN-Revision: 17220cac83cafe46226d7bcf79b5e1fb4de6b1da Maintainer: jpberdejo Status: ready -->
 
 <sect1 xml:id="control-structures.foreach" xmlns="http://docbook.org/ns/docbook" xmlns:xlink="http://www.w3.org/1999/xlink">
  <title><literal>foreach</literal></title>
  <?phpdoc print-version-for="foreach"?>
  <para>
-  PHP 4 introdujo un constructor <literal>foreach</literal>, muy
-  parecido al de Perl y algunos otros lenguajes. Simplemente da un modo fácil de
-  iterar sobre arrays. <literal>foreach</literal> sólo trabaja sobre arrays y
+  El constructor <literal>foreach</literal> simplemente da un modo fácil de
+  iterar sobre arrays. <literal>foreach</literal> funciona solo sobre arrays (y objetos) y
   resultará en un error al intentar usarlo en una variable con un diferente
   tipo de datos o una variable no inicializada. Hay dos sintaxis; la
   segunda es una extensión menor, pero útil de la primera:
@@ -37,8 +36,8 @@ foreach (array_expression as $key => $value)
   <literal>$key</literal> en cada ciclo.
  </simpara>
  <simpara>
-  A partir de PHP 5, es posible 
-  <link linkend="language.oop5.iterations">iterar objetos</link> también.
+  A partir de PHP 5, también es posible
+  <link linkend="language.oop5.iterations">personalizar los objetos de la iteración</link>.
  </simpara>
  <para>
   <note>
@@ -83,6 +82,7 @@ unset($value); // rompe la referencia con el último elemento
   </informalexample>
   Esto sólo es posible si el array iterado puede ser referenciado (es decir, es una
   variable), lo que significa que el código siguiente no funciona:
+  <informalexample>
    <programlisting role="php">
 <![CDATA[
 <?php
@@ -93,6 +93,7 @@ foreach (array(1, 2, 3, 4) as &$value) {
 ?>
 ]]>
    </programlisting>
+  </informalexample>
  </para>
  <warning>
   <para>
@@ -210,7 +211,6 @@ foreach (array(1, 2, 3, 4, 5) as $v) {
   </informalexample>
  </para>
 </sect1>
-
 
 <!-- Keep this comment at the end of the file
 Local variables:
