--- a/language/namespaces.xml
+++ b/language/namespaces.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <!-- $Revision$ -->
-<!-- EN-Revision: cb0630b14901459c0bf1556e7d68f1b4c0d3796e Maintainer: seros Status: ready -->
+<!-- EN-Revision: 920be7b3ce2588d1ab62d8ac7c6abb501dbc97b8 Maintainer: agarzon Status: ready -->
 <chapter xml:id="language.namespaces" xmlns="http://docbook.org/ns/docbook"
 version="1.1">
  <title>Espacios de Nombres</title>
@@ -42,7 +42,7 @@ version="1.1">
    </orderedlist>
   </para>
   <simpara>
-   Los espacios de nombres en PHP proporcionan una manera para agrupar clases, funciones
+   Los espacios de nombres en PHP proporcionan una manera para agrupar clases, interfaces, funciones
    y constantes relacionadas. Un ejemplo de la sintaxis de los espacios de nombres de PHP:
   </simpara>
   <example>
