--- a/language/predefined/iterator/valid.xml
+++ b/language/predefined/iterator/valid.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <!-- $Revision$ -->
-<!-- EN-Revision: af4410a7e15898c3dbe83d6ea38246745ed9c6fb Maintainer: jorgeolaya Status: ready --> 
+<!-- EN-Revision: af4410a7e15898c3dbe83d6ea38246745ed9c6fb Maintainer: yago Status: ready --> 
 
 <refentry xml:id="iterator.valid" xmlns="http://docbook.org/ns/docbook" xmlns:xlink="http://www.w3.org/1999/xlink">
  <refnamediv>
@@ -11,7 +11,7 @@
  <refsect1 role="description">
   &reftitle.description;
   <methodsynopsis>
-   <modifier>resumen</modifier> <modifier>público</modifier> <type>boolean</type><methodname>Iterator::valid</methodname>
+   <modifier>abstract</modifier> <modifier>public</modifier> <type>boolean</type><methodname>Iterator::valid</methodname>
    <void />
   </methodsynopsis>
   <para>
