updated to the most recent version.
git-svn-id: https://svn.php.net/repository/phpdoc/es/trunk@315797 c90b9560-bf6c-de11-be94-00142212c4b1

--- a/language/oop5/cloning.xml
+++ b/language/oop5/cloning.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <!-- $Revision$ -->
-<!-- EN-Revision: 96c9d88bad9a7d7d44bfb7f26c226df7ee9ddf26 Maintainer: chuso Status: ready -->
+<!-- EN-Revision: 4f3e16d7854ee82114b8d849731fbd7de57cc627 Maintainer: yago Status: ready -->
  <sect1 xml:id="language.oop5.cloning" xmlns="http://docbook.org/ns/docbook">
   <title>Clonación de Objetos</title>
   
@@ -18,8 +18,8 @@
 
   <para>
    Para crear una copia de un objeto se utiliza la palabra clave clone (que invoca,
-   si fuera posible, al método __clone() del objeto). No se puede llamar al método
-   __clone() de un objeto directamente. 
+   si fuera posible, al método <link linkend="language.oop5.cloning">__clone()</link> del objeto). No se puede llamar al método
+   <link linkend="language.oop5.cloning">__clone()</link> de un objeto directamente. 
   </para>
 
   <informalexample>
@@ -37,8 +37,8 @@ $copia_de_objeto = clone $objeto;
   </para>
 
   <para>
-   Una vez que la clonación ha finalizado, se llamará al método __clone() 
-   del nuevo objeto (si este método estuviera definido), para permitirle
+   Una vez que la clonación ha finalizado, se llamará al método <link linkend="language.oop5.cloning">__clone()</link>
+   del nuevo objeto (si el método <link linkend="language.oop5.cloning">__clone()</link> estuviera definido), para permitirle
    realizar los cambios necesarios sobre sus propiedades.
   </para>
 
