Fixed problem reported by: Guido Contreras Woda
git-svn-id: https://svn.php.net/repository/phpdoc/es/trunk@315798 c90b9560-bf6c-de11-be94-00142212c4b1

--- a/language/predefined/exception/gettrace.xml
+++ b/language/predefined/exception/gettrace.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <!-- $Revision$ -->
-<!-- EN-Revision: af4410a7e15898c3dbe83d6ea38246745ed9c6fb Maintainer: jorgeolaya Status: ready --> 
+<!-- EN-Revision: af4410a7e15898c3dbe83d6ea38246745ed9c6fb Maintainer: yago Status: ready --> 
 <refentry xml:id="exception.gettrace" xmlns="http://docbook.org/ns/docbook" xmlns:xlink="http://www.w3.org/1999/xlink">
  <refnamediv>
   <refname>Exception::getTrace</refname>
@@ -10,7 +10,7 @@
  <refsect1 role="description">
   &reftitle.description;
   <methodsynopsis>
-   <modifier>final</modifier> <modifier>público</modifier> <type>array</type><methodname>Exception::getTrace</methodname>
+   <modifier>final</modifier> <modifier>public</modifier> <type>array</type><methodname>Exception::getTrace</methodname>
    <void />
   </methodsynopsis>
   <para>
