Fixed error in methodsynopsis.
git-svn-id: https://svn.php.net/repository/phpdoc/es/trunk@316047 c90b9560-bf6c-de11-be94-00142212c4b1

--- a/language/oop5/decon.xml
+++ b/language/oop5/decon.xml
@@ -3,7 +3,7 @@
 <!-- EN-Revision: 8574a2c1bd1dee8283a9d05fc0bd21c36efd237b Maintainer: agarzon Status: ready -->
 
 <sect1 xml:id="language.oop5.decon" xmlns="http://docbook.org/ns/docbook">
- <title>Constructores y Destructores</title>
+ <title>Constructores y destructores</title>
  
  <sect2 xml:id="language.oop5.decon.constructor">
   <title>Constructor</title>
